# WelfarePlatform

./: CMakeLists.txt  README.md
welfare/: CMakeLists.txt  welfare.cpp
welfare/include/: User.h  UserDAO.h  UserService.h  Welfare.h  WelfareDAO.h  WelfareService.h
welfare/sqlite3/: CMakeLists.txt
